[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/HashInterface.gd" type="Script" id=1]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Commodore Angled v1.2.ttf" type="DynamicFontData" id=3]



[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.356863, 0.227451, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.341176, 0.192157, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.470588, 0.305882, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.462745, 0.270588, 0.270588, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.384314, 0.223529, 0.223529, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.333333, 0.333333, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.223529, 0.356863, 0.227451, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.184314, 0.341176, 0.192157, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.301961, 0.470588, 0.305882, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.298039, 0.32549, 0.560784, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.25098, 0.278431, 0.494118, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.372549, 0.407843, 0.701961, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]

[sub_resource type="DynamicFont" id=18]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=19]

[sub_resource type="DynamicFont" id=20]
size = 15
extra_spacing_space = -5
font_data = ExtResource( 3 )

[node name="HashInterface" type="Polygon2D"]
position = Vector2( -115.278, -124.671 )
scale = Vector2( 1.05812, 1.02412 )
color = Color( 0.447059, 0.356863, 0.243137, 1 )
polygon = PoolVector2Array( 723.243, 171.175, 723.243, 659.399, 1195.78, 658.781, 1195.78, 170.557 )
script = ExtResource( 1 )

[node name="GenHashButton" parent="." instance=ExtResource( 2 )]
margin_left = 1007.0
margin_top = 198.0
margin_right = 1148.0
margin_bottom = 247.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "+"

[node name="DelHashButton" parent="." instance=ExtResource( 2 )]
margin_left = 1007.0
margin_top = 269.0
margin_right = 1148.0
margin_bottom = 318.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "-"

[node name="SendRequestButton" parent="." instance=ExtResource( 2 )]
margin_left = 794.123
margin_top = 342.0
margin_right = 933.123
margin_bottom = 391.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Send"

[node name="AlertButton" parent="." instance=ExtResource( 2 )]
margin_left = 1007.0
margin_top = 341.511
margin_right = 1149.0
margin_bottom = 390.511
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
text = "Alert"

[node name="InputField" type="RichTextLabel" parent="."]
margin_left = 773.0
margin_top = 196.0
margin_right = 960.0
margin_bottom = 318.0
custom_styles/normal = SubResource( 17 )
custom_fonts/normal_font = SubResource( 18 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
tab_size = 0
text = "b7828d9a276017c9f53faad02fc4a5d598ec08dbcb2a8cb031ee3ae18e258bd0"
scroll_active = false

[node name="ResponseText" type="RichTextLabel" parent="."]
anchor_right = 0.26
margin_left = 749.0
margin_top = 414.0
margin_right = 1172.0
margin_bottom = 634.0
custom_styles/normal = SubResource( 19 )
custom_fonts/normal_font = SubResource( 20 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "{
  \"test\": \"test123\",
  \"test_again\": \"test_12356\",
  \"data\": [
    \"abc\": 123,
	\"123\": \"abc\",
  ]
}"
[connection signal="pressed" from="GenHashButton" to="." method="_on_GenHashButton_pressed"]
[connection signal="pressed" from="DelHashButton" to="." method="_on_DelHashButton_pressed"]
[connection signal="pressed" from="SendRequestButton" to="." method="_on_SendRequestButton_pressed"]
[connection signal="pressed" from="AlertButton" to="." method="_on_AlertButton_pressed"]
